# gravity_field_sampling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
godot-demo/: environment_1.tres  project.godot
godot-demo/goomba_dae/: Hilight.png.import  Kuribo.dae  Kuribo.dae.import  Kuribo.png.import  KuriboAll.0.png.import  KuriboAll.1.png.import  KuriboAll.2.png.import  KuriboAll.3.png.import  KuriboChief.dae  KuriboChief.dae.import  KuriboChief_bake.dae  KuriboChief_bake.dae.import  KuriboEye.0.png.import  KuriboEye.1.png.import  KuriboEye.2.png.import  KuriboMini.dae  KuriboMini.dae.import  KuriboMini_bake.dae  KuriboMini_bake.dae.import  Kuribo_bake.dae  Kuribo_bake.dae.import  MameKuriboBody.png.import  MameKuriboEye.0.png.import  MameKuriboEye.1.png.import  MameKuriboEye.2.png.import  materials_chief.txt  noise.png.import  vertexColors_chief.png.import  vertexColors_kuribo.png.import  vertexColors_mini.png.import
godot-demo/materials/: dummy_material.tres  mat_particle.tres  mat_shader_balls.tres  mat_trails_0.tres  mat_trails_shader.tres
godot-demo/materials/physics/: ship_physics_mat.tres
godot-demo/meshes/: cave_sphere.obj.import  cave_sphere_with_holes.obj.import  cone.obj.import  cube.obj.import  cylinder.obj.import  flat_earth.obj.import  flat_earth_2.obj.import  monkey.obj.import  smooth_sphere.obj.import  sphere.obj.import  tetrahedron.obj.import  torus.obj.import  trail_mesh.tres  yoshi.obj.import
godot-demo/octree_data/: cave_sphere.grav  cave_sphere.pot  cone.grav  cone.pot  cone_2.grav  cone_3.grav  cube.grav  cube.pot  cylilnder.grav  cylinder_1.grav  flat_earth.pot  flath_earth.grav  monkey.grav  monkey.pot  smooth_sphere.pot  sphere.grav  tetrahedron.grav  torus.grav  torus.pot  yoshi.grav  yoshi.pot
godot-demo/other_data/: cave_sphere_with_holes_particle_collider.exr.import  cone_particle_collider.exr  cone_particle_collider.exr.import  cube_particle_collider.exr.import  cylinder_particle_collider.exr  cylinder_particle_collider.exr.import  flat_earth_particle_collider.exr.import  monkey_particle_collider.exr.import  smooth_sphere_particle_collider.exr.import  sphere_particle_collider.exr.import  tetrahedron_particle_collider.exr  tetrahedron_particle_collider.exr.import  torus_particle_collider.exr.import  yoshi_particle_collider.exr.import
godot-demo/satellite/: license.txt  scene.gltf.import
godot-demo/satellite/textures/: Satellite_normal.jpeg.import  Solar_Panel_baseColor.jpeg.import  Solar_Panel_metallicRoughness.png.import  Solar_Panel_normal.jpeg.import
godot-demo/scenes/: Ball.tscn  BallTrail.tscn  Earth.tscn  Field.tscn  FieldQueue.tscn  FlathEarth.tscn  Goomba.tscn  MainMenu.tscn  MainScene.tscn  Satellite.tscn  yoshi_static_body.tscn
godot-demo/scripts/: ball.gd  ball_trail.gd  field.gd  fields.gd  goomba.gd  main_scene.gd  octree.gd  play_button.gd  trackball.gd  util.gd
godot-demo/shaders/: balls_visual_shader.tres  particles.gdshader  trail_spatial_shader.gdshader  trail_visual_shader.tres
godot-demo/texture/: normal_map.png.import  rock_texture.png.import
godot-demo/textures/: blue_texture.jpg.import  flat_earth_texture.jpg.import
godot-demo/yoshi_dae/: GlaSphereRefLight2.png.import  Rock_006_C.png.import  YoshiHeadPlanet.dae  YoshiHeadPlanet.dae.import  YoshiHeadPlanet_bake.dae  YoshiHeadPlanet_bake.dae.import  materials.txt  vertexColors.png.import  wds_002_c.png.import  wood05.png.import  wood06.png.import
imgui/: CMakeLists.txt
include/: GPUComputing.hpp  Mesh.hpp  Shader.hpp  Util.hpp  gravity.hpp  mesh.hpp  octree.hpp  shader.hpp  timer.hpp  util.hpp
shaders/: add.air  add.metal  add.metallib  fs.glsl  fs_tetra.glsl  get_gravities_from_tubes.metal  get_gravity_from_tubes.metal  get_potential_from_tubes.metal  get_potentials_from_tubes.metal  get_potentials_from_tubes_opt.metal  octree_fs.glsl  octree_vs.glsl  vs_0.glsl  vs_1.glsl
source/: GPUComputingCL.cpp  GPUComputingMetal.cpp  Mesh.cpp  Shader.cpp  Util.cpp  gravity.cpp  main.cpp  mesh.cpp  octree.cpp  shader.cpp  stb_image.cpp  trash_code  util.cpp
